@@ -1,31 +1,0 @@
-##############################
-# Gearman Proxy Config
-#
-
-# default is 0.
-# 0 gives less informations
-# 1 writes every datahandle into the logfile
-#$debug=0;
-
-# path to the logfile
-$logfile="var/log/gearman/proxy.log";
-
-# defines the remote Port of the gearmand. Default is 4730
-$remotePort="4730";
-
-# defines the server where the jobs will come from
-$remoteHost="10.0.1.99";
-
-# defines the server where the jobs will come from
-$localHost="192.168.5.5";
-
-# defines the remote Port of the gearmand. Default is 4730
-$localPort="4730";
-
-# The queues which will be copied to the remote host
-$queues = {
-    "$localHost:$localPort/hostgroup_Gearmanproxy"  => "$remoteHost:$remotePort/hostgroup_Gearmanproxy",
-    "$localHost:$localPort/hosts"                   => "$remoteHost:$remotePort/hosts",
-    "$remoteHost:$remotePort/check_results"         => "$localHost:$localPort/check_results",
-};
-
